Revert "Remove habitsDesc"
This reverts commit a9d8f4089c526bc7e7d0fdc90b1b911d19dff9c2.

--- a/website/common/locales/en/tasks.json
+++ b/website/common/locales/en/tasks.json
@@ -12,6 +12,7 @@
   "theseAreYourTasks": "These are your <%= taskType %>",
   "habit": "Habit",
   "habits": "Habits",
+  "habitsDesc": "Habits don't have a rigid schedule. You can check them off multiple times per day.",
   "positive": "Positive",
   "negative": "Negative",
   "yellowred": "Weak",
