Revert "Remove rewardsDesc"

--- a/website/common/locales/en/tasks.json
+++ b/website/common/locales/en/tasks.json
@@ -67,6 +67,7 @@
   "score": "Score",
   "reward": "Reward",
   "rewards": "Rewards",
+  "rewardsDesc": "Rewards are a great way to use Habitica and complete your tasks. Try adding a few today!",
   "gold": "Gold",
   "silver": "Silver (100 silver = 1 gold)",
   "price": "Price",
