Revert "Remove expandChecklist"
This reverts commit 62f3bbea2dc8340018c01efdc7ffcf4c6b3d46ae.

--- a/website/common/locales/en/tasks.json
+++ b/website/common/locales/en/tasks.json
@@ -22,6 +22,7 @@
   "addChecklist": "Add Checklist",
   "checklist": "Checklist",
   "newChecklistItem": "New checklist item",
+  "expandChecklist": "Expand Checklist",
   "collapseChecklist": "Collapse Checklist",
   "text": "Title",
   "notes": "Notes",
