--- a/website/common/locales/en/character.json
+++ b/website/common/locales/en/character.json
@@ -52,7 +52,7 @@
   "winteryColors": "Wintery Colors",
   "equipment": "Equipment",
   "equipmentBonus": "Equipment",
-  "equipBonus": "Bonus",
+  "battleGear": "Battle Gear",
   "classEquipBonus": "Class Bonus",
   "gear": "Gear",
   "autoEquipBattleGear": "Auto-equip new gear",
